# wsInfoShare

./: .dockerignore  .env.example  .env.production.example  .gitignore  AGENTS.md  CLAUDE.md  Caddyfile  Dockerfile  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
.github/workflows/: deploy.yml
config/: settings.py
context/archive/: Mvp-wsInfoShare.md
context/changes/bootstrap-verification/: verification.md
context/foundation/: health-check.md  infrastructure.md  prd.md  shape-notes.md  tech-stack.md
notes/: uv.md
