[project]
name = "ws-info-share"
version = "0.1.0"
description = "Share information system"
requires-python = ">=3.13"
dependencies = [
    "django>=6.0.5",
]

[dependency-groups]
dev = [
    "pip-audit>=2.10.0",
    "pytest>=9.0.3",
    "pytest-django>=4.12.0",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
